--- a/app/views/home.njk
+++ b/app/views/home.njk
@@ -2,8 +2,8 @@
 {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
 
 {% block content %}
+  <h2 class="govuk-heading-l">All services</h2>
   {%if services.length %}
-
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-one-half">
         <form method="GET" action="/">
@@ -18,7 +18,6 @@
     </div>
 
     <table class="govuk-table">
-      <caption class="govuk-table__caption">Microservices</caption>
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th scope="col" class="govuk-table__header">Name</th>
@@ -31,11 +30,11 @@
       <tbody class="govuk-table__body">
         {% for service in services %}
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">{{ service. name }}</td>
-            <td class="govuk-table__cell"><a href="{{ service. repository }}">{{ service. repository }}</a></td>
-            <td class="govuk-table__cell">{{ service. description }}</td>
-            <td class="govuk-table__cell">{{ service. framework }}</td>
-            <td class="govuk-table__cell">{{ service. owner }}</td>
+            <td class="govuk-table__cell"><a href="/details?service={{ service.name }}">{{ service.name }}</a></td>
+            <td class="govuk-table__cell"><a href="{{ service.repository }}">{{ service.repository }}</a></td>
+            <td class="govuk-table__cell">{{ service.description }}</td>
+            <td class="govuk-table__cell">{{ service.framework }}</td>
+            <td class="govuk-table__cell">{{ service.owner }}</td>
           </tr>
         {% endfor %}
       </tbody>
